--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <commons-lang3.version>3.1</commons-lang3.version>
         <gson.version>2.8.2</gson.version>
         <rocketmq-spring-boot-starter.version>2.1.1</rocketmq-spring-boot-starter.version>
+        <seata.version>1.3.0</seata.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -132,6 +133,17 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <!--seata-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-seata</artifactId>
+                <version>2.1.0.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-all</artifactId>
+                <version>${seata.version}</version>
             </dependency>
 
         </dependencies>
