--- a/springcloud-app-seata/springcloud-app-seata-account/src/main/resources/application.yml
+++ b/springcloud-app-seata/springcloud-app-seata-account/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             seata:
                 tx-service-group: fsp_tx_group
     datasource:
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://localhost:3306/seata-account
         username: root
         password: 12345678
