--- a/springcloud-app-seata/springcloud-app-seata-account/src/main/resources/file.conf
+++ b/springcloud-app-seata/springcloud-app-seata-account/src/main/resources/file.conf
@@ -22,7 +22,7 @@ transport {
 }
 service {
   #vgroup->rgroup
-  vgroup_mapping.fsp_tx_group = "default"
+  vgroupMapping.fsp_tx_group = "default"
   #only support single node
   default.grouplist = "127.0.0.1:8091"
   #degrade current not support
