--- a/springcloud-app-seata/springcloud-app-seata-order/src/main/resources/application.yml
+++ b/springcloud-app-seata/springcloud-app-seata-order/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
             seata:
                 tx-service-group: fsp_tx_group
     datasource:
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://127.0.0.1:3306/seata-order
         username: root
         password: 12345678
