--- a/springcloud-app-seata/springcloud-app-seata-storage/src/main/resources/application.yml
+++ b/springcloud-app-seata/springcloud-app-seata-storage/src/main/resources/application.yml
@@ -16,13 +16,13 @@ server:
     port: 8082
 spring:
     application:
-        name: springcloud-app-seata-storage-server
+        name: springcloud-app-seata-storage
     cloud:
         alibaba:
             seata:
                 tx-service-group: fsp_tx_group
     datasource:
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://127.0.0.1:3306/seata-storage
         username: root
         password: 12345678
